# protocol

./: Cargo.toml
fedimint-lightning-vend/: Cargo.toml
fedimint-lightning-vend/src/: lib.rs
machine-fedimint/: Cargo.toml
machine-fedimint/src/: lib.rs
machine/src/: lib.rs
shared/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
